# agent

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: docs-qa.yml  release.yml
config/: capabilities.manifest.json  plugins.json  policy.json
config/policy.profiles/: base.json  cheap.json  max.json
core/: cg.sh  test_agent.py
core/cg/: app_flow.py  capability_manifest.py  cli_ui.py  command_groups.py  dashboard_app.py  dashboard_data.py  doctor.py  env.py  eval_harness.py  executor.py  gdrive_fetch.py  inspect_ops.py  llm.py  main.py  memory.py  plugins.py  policy.py  router.py  runtime_ask.py  runtime_common.py  runtime_run.py  telemetry.py  tool_registry.py
core/cg/addons/: README.dashboard.md  README.eval.md  README.fetch_drive.md  README.md  __init__.py  dashboard_app.py  dashboard_data.py  eval_harness.py
core/cg/cli/: __init__.py  app.py  app_flow.py  command_groups.py  main.py
core/cg_utils/: __init__.py  text.py
core/tests/: test_ask_deterministic.py  test_cli_snapshots.py  test_dashboard_data.py  test_policy_enforcement.py  test_router.py  test_run_routing_e2e.py  test_telemetry.py
docs/: ARCHITECTURE.md  BRAND_DESIGN_GUIDE.md  CLI_COLOR_RULES.md  COMMAND_REFERENCE.md  DELIVERY_GUIDE.md  DOCS_VERSIONING_POLICY.md  GTM_STRATEGY.md  PLUGIN_ARCHITECTURE.md  README.md  TELEMETRY_SCHEMA.md  check_docs.py  stale_path_patterns.txt
packaging/homebrew/: cad-guardian.rb
packaging/marketplace/: README.md  app-manifest.json  build_release_manifest.py
workspace/: README.md  list_files.py
workspace/workspace/: README.md  STATUS.md
(+48 files in other folders)
